--- a/Oppgave2/index.html
+++ b/Oppgave2/index.html
@@ -38,6 +38,9 @@
         </section>
 
         <section class="completed-todo">
+            <h3 id="completed-todo-header">Completed Todos</h3>
+            <input type="radio" id="completed-todo-radio-button" value="false">
+            <label for="completed-todo-radio-button">Sort By Date</label>
             <table id="completed-table">
                 <tr>
                     <th>Title</th>
