Filter checkbox floats to the right

--- a/Oppgave2/index.html
+++ b/Oppgave2/index.html
@@ -41,8 +41,10 @@
         </section>
 
         <section class="completed-todo">
-            <h3 id="completed-todo-header">Completed Todos</h3>
-            <input type="checkbox" id="completed-todo-checkbox">Sort By Date</input>
+            <h3 id="completed-todos-title">Completed todos</h3>
+            <div id="completed-todos-checkbox">
+                <input type="checkbox">Filter by date</input>
+            </div>
             <table id="completed-todos-table">
                 <tr>
                     <th>Title</th>
