--- a/Oppgave2/index.html
+++ b/Oppgave2/index.html
@@ -15,24 +15,24 @@
     <main>
         <section class="new-todo">
             <!--button kan ha value="" og name=""-->
-            <button id="new-todo-button">New Todo</button>
+            <button id="new-todo-button" class="new-todo-button-class">+ Todo </button>
         </section> 
         <section class="active-todo">
             <ul id="todo-list">
                 <li class="todo-list-item">
-                    <title class="todo-list-title">Todo 1</title>
+                    <h2 class="todo-list-title">Todo 1</h2>
                     <p class="todo-list-description">Description of todo task 1</p>
                     <button class="todo-list-delete-button" name="Delete">Delete</button>
                     <button class="todo-list-complete-button" name="Complete">Complete</button>
                 </li>
                 <li>
-                    <title class="todo-list-title">Todo 2</title>
+                    <h2 class="todo-list-title">Todo 2</h2>
                     <p class="todo-list-description">Description of todo task 2</p>
                     <button class="todo-list-delete-button" name="Delete">Delete</button>
                     <button class="todo-list-complete-button" name="Complete">Complete</button>
                 </li>
                 <li>
-                    <title class="todo-list-title">Todo 3</title>
+                    <h2 class="todo-list-title">Todo 3</h2>
                     <p class="todo-list-description">Description of todo task 3</p>
                     <button class="todo-list-delete-button" name="Delete">Delete</button>
                     <button class="todo-list-complete-button" name="Complete">Complete</button>
